--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"three": "^0.153.0",
-		"@threlte/core": "latest",
-		"@types/three": "^0.152.1",
-		"@threlte/extras": "latest"
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.24.1",
+		"@threlte/core": "^6.0.8",
+		"@threlte/extras": "^5.6.2",
+		"@types/three": "^0.156.0",
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.1",
+		"three": "^0.156.1",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9"
 	}
 }
